--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
 
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
+    <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -31,6 +31,10 @@
     <string name="action_toggle_to_organization">Create Organization Account</string>
     <string name="title_create_organization">Create Organization</string>
     <string name="title_create_volunteer">Create Volunteer</string>
+    <string name="prompt_name">Full Name</string>
+    <string name="prompt_username">Username</string>
+    <string name="action_sign_up_short">Sign Up</string>
+    <string name="error_invalid_username">Invalid username!</string>
 
 
 </resources>
