--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,10 @@
     <string name="action_save">Save</string>
     <string name="prompt_about">About</string>
     <string name="prompt_occupation">Occupation</string>
+    <string name="prompt_requirements">Requirements</string>
+    <string name="prompt_goal">Goal</string>
+    <string name="prompt_need">Need</string>
+    <string name="prompt_site">Site</string>
 
 
 </resources>
