--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="prompt_goal">Goal</string>
     <string name="prompt_need">Need</string>
     <string name="prompt_site">Site</string>
+    <string name="title_activity_items_selection">Selection</string>
 
 
 </resources>
