Saving selected Skills. Loading and saving Causes.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,6 +47,7 @@
     <string name="prompt_need">Need</string>
     <string name="prompt_site">Site</string>
     <string name="title_activity_items_selection">Selection</string>
+    <string name="action_next">Next</string>
 
 
 </resources>
