--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,12 +42,9 @@
     <string name="action_save">Save</string>
     <string name="prompt_about">About</string>
     <string name="prompt_occupation">Occupation</string>
-    <string name="prompt_requirements">Requirements</string>
-    <string name="prompt_goal">Goal</string>
-    <string name="prompt_need">Need</string>
+    <string name="prompt_mission">Mission</string>
     <string name="prompt_site">Site</string>
     <string name="title_activity_items_selection">Selection</string>
     <string name="action_next">Next</string>
-
 
 </resources>
