--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,5 +57,12 @@
     <string name="prompt_contact">Contact</string>
     <string name="cancel">Cancel</string>
     <string name="save">Save</string>
+    <string name="title_activity_google_places">GooglePlacesActivity</string>
+    <string name="action_settings">Settings</string>
+    <string name="prompt_location">Location</string>
+    <string name="location">Location</string>
+    <string name="virtual">Virtual</string>
+    <string name="dated">Dated</string>
+    <string name="ongoing">Ongoing</string>
 
 </resources>
