--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,7 +32,7 @@
     <string name="action_toggle_to_organization">Create Organization Account</string>
     <string name="title_create_organization">Create Organization</string>
     <string name="title_create_volunteer">Create Volunteer</string>
-    <string name="prompt_name">Full Name</string>
+    <string name="name">Full Name</string>
     <string name="prompt_username">Username</string>
     <string name="action_sign_up_short">Sign Up</string>
     <string name="error_invalid_username">Invalid username!</string>
@@ -41,15 +41,15 @@
     <string name="error_invalid_phone">Phone invalid.</string>
     <string name="title_activity_completion">Complete Profile</string>
     <string name="action_save">Save</string>
-    <string name="prompt_about">About</string>
-    <string name="prompt_occupation">Occupation</string>
+    <string name="about">About</string>
+    <string name="occupation">Occupation</string>
     <string name="mission">Mission</string>
     <string name="site">Site</string>
     <string name="title_activity_items_selection">Selection</string>
     <string name="action_next">Next</string>
     <string name="title_activity_edit_opportunity">Create Opportunity</string>
-    <string name="prompt_title">Title</string>
-    <string name="prompt_description">Description</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
     <string name="volunteers_number">Volunteers Number</string>
     <string name="time_commitment">Time Commitment</string>
     <string name="others_requirements">Others Requirements</string>
@@ -59,7 +59,6 @@
     <string name="save">Save</string>
     <string name="title_activity_google_places">GooglePlacesActivity</string>
     <string name="action_settings">Settings</string>
-    <string name="prompt_location">Location</string>
     <string name="location">Location</string>
     <string name="virtual">Virtual</string>
     <string name="dated">Dated</string>
@@ -175,5 +174,13 @@
     <string name="cnpj">CNPJ</string>
     <string name="title_activity_organization">Organization</string>
     <string name="title_activity_volunteer">Volunteer</string>
+    <string name="size">Size</string>
+    <string name="gender">Gender</string>
+    <string name="birth_at">Birth At</string>
+    <string name="title_activity_edit_user">Edit Profile</string>
+    <string name="images">Images</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="contacts">Contacts</string>
 
 </resources>
