--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="title_activity_login">Sign in</string>
 
     <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
@@ -32,8 +32,8 @@
     <string name="action_toggle_to_organization">Create Organization Account</string>
     <string name="title_create_organization">Create Organization</string>
     <string name="title_create_volunteer">Create Volunteer</string>
-    <string name="name">Full Name</string>
-    <string name="prompt_username">Username</string>
+    <string name="name">Name</string>
+    <string name="username">Username</string>
     <string name="action_sign_up_short">Sign Up</string>
     <string name="error_invalid_username">Invalid username!</string>
     <string name="prompt_organization_name">Organization Name</string>
@@ -186,5 +186,6 @@
     <string name="share">Share</string>
     <string name="edit">Edit</string>
     <string name="sign_out">Sign Out</string>
+    <string name="mock_password">*********</string>
 
 </resources>
