--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="facebook_app_id">233886120423294</string>
     <string name="fb_login_protocol_scheme">fb233886120423294</string>
 
-    <string name="app_name">Ser Voluntário</string>
+    <string name="app_name">1Step</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
@@ -11,7 +11,7 @@
     <!-- Strings related to login -->
     <string name="email">Email</string>
     <string name="password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Log In</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is incorrect</string>
@@ -22,9 +22,10 @@
     </string>
     <string name="error_try_later">Unexpected error, try later</string>
     <string name="error_facebook_login">Facebook login error, try later.</string>
-    <string name="action_facebook_sign_in">Facebook Login</string>
+    <string name="action_facebook_sign_in">Facebook</string>
     <string name="action_sign_up">Sign Up</string>
     <string name="action_forgot_password">Forgot password?</string>
+    <string name="forgot_password_reset_it">Forgot your password? Reset it.</string>
     <string name="action_organization_sign_up">Organization?</string>
     <string name="error_password_match">Password do not match</string>
     <string name="title_activity_sign_up">Sign Up</string>
@@ -187,5 +188,7 @@
     <string name="edit">Edit</string>
     <string name="sign_out">Sign Out</string>
     <string name="mock_password">*********</string>
+    <string name="want_to_be_a_volunteer_sign_up">Want to be a <b>Volunteer?</b> Sign up.</string>
+    <string name="i_want_my_organization_here">I want my <b>Organization</b> here!</string>
 
 </resources>
