--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,8 @@
     <string name="action_sign_in">Log In</string>
     <string name="action_sign_in_short">Sign in</string>
     <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is incorrect</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_invalid_password">This password is invalid</string>
     <string name="error_field_required">This field is required</string>
     <string name="error_field_one_required">At least one field is required</string>
     <string name="permission_rationale">"Contacts permissions are needed for providing email
@@ -190,5 +191,8 @@
     <string name="mock_password">*********</string>
     <string name="want_to_be_a_volunteer_sign_up">Want to be a <b>Volunteer?</b> Sign up.</string>
     <string name="i_want_my_organization_here">I want my <b>Organization</b> here!</string>
+    <string name="my_profile">My Profile</string>
+    <string name="saving_progress">Saving…</string>
+    <string name="loading_progress">Loading…</string>
 
 </resources>
