Main remodel for Organisations.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,5 +194,8 @@
     <string name="my_profile">My Profile</string>
     <string name="saving_progress">Saving…</string>
     <string name="loading_progress">Loading…</string>
+    <string name="title_create_opportunity">Create Opportunity</string>
+    <string name="title_explore">Explore</string>
+    <string name="title_my_opportunties">My Opportunities</string>
 
 </resources>
